--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
     "start": "node index.js"
   },
-   "engines": {
+  "engines": {
     "node": ">=14 <15"
   },
   "keywords": [],
@@ -20,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
